# apps/api/src/firetrack/fenomeno/services.py
@@ -18,26 +18,47 @@ def create_and_start_fenomeno(user: User) -> Fenomeno:
 
     return fenomeno
 
+
 def list_user_fenomenos(user: User) -> List[Fenomeno]:
-    fenomenos = Fenomeno.objects.filter(user=user).order_by('-created_at')
+    fenomenos = Fenomeno.objects.filter(user=user).order_by("-created_at")
 
     return fenomenos
 
-def update_fenomeno_period(user, queimadas_id, start_date_str, end_date_str) -> Fenomeno:
+
+def update_selected_product(user: User, queimadas_id: int, product: str) -> Fenomeno:
     fenomeno = get_object_or_404(Fenomeno, id=queimadas_id)
 
     if fenomeno.user != user:
         raise PermissionDenied("Usuário não tem permissão para alterar esse fenômeno")
-    
+
+    if product not in ["MODIS", "VIIRS"]:
+        raise ValueError("Produto inválido. Use 'MODIS' ou 'VIIRS'.")
+
+    fenomeno.selected_product = product
+    fenomeno.save()
+    fsm = FenomenoFSM(fenomeno)
+    fsm.select_product()
+
+    return fenomeno
+
+
+def update_fenomeno_period(
+    user, queimadas_id, start_date_str, end_date_str
+) -> Fenomeno:
+    fenomeno = get_object_or_404(Fenomeno, id=queimadas_id)
+
+    if fenomeno.user != user:
+        raise PermissionDenied("Usuário não tem permissão para alterar esse fenômeno")
+
     try:
         start_date = datetime.strptime(start_date_str, "%Y-%m-%dT%H:%M:%SZ").date()
         end_date = datetime.strptime(end_date_str, "%Y-%m-%dT%H:%M:%SZ").date()
     except ValueError:
         raise InvalidDateFormat("Formato de data inválido. Use ISO 8601")
-    
+
     if start_date > end_date:
         raise InvalidDateRange("Data de início deve ser antes ou igual à data final.")
-    
+
     fenomeno.filter_start_date = start_date
     fenomeno.filter_end_date = end_date
     fenomeno.save()
